[package]
name = "hr_bot"
version = "0.1.0"
authors = ["KaleBBuR <kalebbryceburrow2018.2012@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.9.2", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "framework", "standard_framework", "collector"] }
tokio = { version = "0.2", features = ["macros"] }
bson = "1.1.0"
mongodb = "1.1.1"
serde = { version = "1.0.117", features = ["derive"] }